url 구성 변경, 모델 일부 수정 등(#31)

--- a/.config/nginx/kagglebreak.conf
+++ b/.config/nginx/kagglebreak.conf
@@ -11,7 +11,7 @@ server {
     }
 
     location /static {
-        alias /home/lynn/workspace/django/kagglebreak/website/static;
+        alias /home/lynn/workspace/django/kagglebreak/.static_root;
     }
 
 }
